objects/Ecom_OrderService_Mappings__mdt.object
<CustomObject>
    <fields>
        <fullName>APTSECOM_Is_Abandoned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Abandoned Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Pricing_Segment__c</fullName>
        <label>Customer Pricing Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Law Firm</fullName>
                    <default>true</default>
                    <label>Law Firm</label>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                    <isActive>false</isActive>
                    <label>Corporate</label>
                </value>
                <value>
                    <fullName>Small Law</fullName>
                    <isActive>false</isActive>
                    <label>Small Law</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Field_API__c</fullName>
        <label>Ecom Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_Field_Value__c</fullName>
        <label>Ecom Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_MaxAttorney__c</fullName>
        <label>Ecom MaxAttorney</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecom_MinAttorney__c</fullName>
        <label>Ecom MinAttorney</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecom_Object__c</fullName>
        <label>Ecom Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_OwnerName__c</fullName>
        <label>Ecom_OwnerName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jeffrey Scalise</fullName>
                </value>
                <value>
                    <fullName>Wendy Schwab</fullName>
                </value>
                <value>
                    <fullName>Erin Jacobs</fullName>
                </value>
                <value>
                    <fullName>Alex Borchert</fullName>
                </value>
                <value>
                    <fullName>Kim Sorrells</fullName>
                </value>
                <value>
                    <fullName>Toby Tyler</fullName>
                    <isActive>false</isActive>
                    <label>Toby Tyler</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Owner__c</fullName>
        <label>Ecom Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_StoreName__c</fullName>
        <label>Ecom StoreName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales_Org__c</fullName>
                    <default>true</default>
                    <label>Sales_Org__c</label>
                </value>
                <value>
                    <fullName>Customer_Type__c</fullName>
                </value>
                <value>
                    <fullName>Customer_Group__c</fullName>
                </value>
                <value>
                    <fullName>FrozenMarketSegment__c</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>BU_Marketing_Segment__c</fullName>
                </value>
                <value>
                    <fullName>GLI_Segment__c</fullName>
                </value>
                <value>
                    <fullName>GLI_Sub_Segment__c</fullName>
                </value>
                <value>
                    <fullName>ForecastCategoryName</fullName>
                </value>
                <value>
                    <fullName>StageName</fullName>
                </value>
                <value>
                    <fullName>Status__c</fullName>
                </value>
                <value>
                    <fullName>Source__c</fullName>
                </value>
                <value>
                    <fullName>LCRM_Sub_BU__c</fullName>
                </value>
                <value>
                    <fullName>name</fullName>
                </value>
                <value>
                    <fullName>LCRM_Sales_Org__c</fullName>
                </value>
                <value>
                    <fullName>LCRM_Customer_Type__c</fullName>
                </value>
                <value>
                    <fullName>LCRM_Customer_Group__c</fullName>
                </value>
                <value>
                    <fullName>LCRM_Frozen_Market_Segment__c</fullName>
                </value>
                <value>
                    <fullName>LCRM_Industry__c</fullName>
                </value>
                <value>
                    <fullName>LCRM_Market_Segment__c</fullName>
                </value>
                <value>
                    <fullName>Digital_Firm_Name__c</fullName>
                </value>
                <value>
                    <fullName>Source_System_Name__c</fullName>
                </value>
                <value>
                    <fullName>LCRM_Email_Verification__c</fullName>
                </value>
                <value>
                    <fullName>LCRM_Phone_Verification__c</fullName>
                </value>
                <value>
                    <fullName>Customer_Class__c</fullName>
                </value>
                <value>
                    <fullName>Campaign_Cell__c</fullName>
                </value>
                <value>
                    <fullName>Tracking_Code__c</fullName>
                </value>
                <value>
                    <fullName>Lead_Scoring_Combined__c</fullName>
                </value>
                <value>
                    <fullName>LeadSource</fullName>
                </value>
                <value>
                    <fullName>Form_Organization_Type__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Org</fullName>
                    <default>true</default>
                    <label>Sales Org</label>
                </value>
                <value>
                    <fullName>Customer Type</fullName>
                </value>
                <value>
                    <fullName>Customer Group</fullName>
                </value>
                <value>
                    <fullName>Frozen Market Segment</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>BU Marketing Segment</fullName>
                </value>
                <value>
                    <fullName>GLI Segment</fullName>
                </value>
                <value>
                    <fullName>GLI Sub Segment</fullName>
                </value>
                <value>
                    <fullName>Forecast Category</fullName>
                </value>
                <value>
                    <fullName>Stage</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Sub-BU</fullName>
                </value>
                <value>
                    <fullName>pricebookId</fullName>
                </value>
                <value>
                    <fullName>Digital Firm Name</fullName>
                </value>
                <value>
                    <fullName>Market Segment</fullName>
                </value>
                <value>
                    <fullName>Source System Name</fullName>
                </value>
                <value>
                    <fullName>Email Verification Status</fullName>
                </value>
                <value>
                    <fullName>Phone Verification Status</fullName>
                </value>
                <value>
                    <fullName>Customer Class</fullName>
                </value>
                <value>
                    <fullName>Tracking Code</fullName>
                </value>
                <value>
                    <fullName>Lead Type</fullName>
                </value>
                <value>
                    <fullName>Lead Source</fullName>
                </value>
                <value>
                    <fullName>Source Type</fullName>
                </value>
                <value>
                    <fullName>Organization Type</fullName>
                </value>
                <value>
                    <fullName>Lead Description</fullName>
                </value>
                <value>
                    <fullName>Tracking Code Url</fullName>
                </value>
                <value>
                    <fullName>Campaign ID</fullName>
                </value>
                <value>
                    <fullName>Lead Score</fullName>
                </value>
                <value>
                    <fullName>Source Description</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WEST</fullName>
                    <default>true</default>
                    <label>WEST</label>
                </value>
                <value>
                    <fullName>GLI</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>FIRM</fullName>
                </value>
                <value>
                    <fullName>Solo Law Firm</fullName>
                </value>
                <value>
                    <fullName>SLF 2-3</fullName>
                </value>
                <value>
                    <fullName>Firm-Law Small</fullName>
                </value>
                <value>
                    <fullName>West - SLF 2-3</fullName>
                </value>
                <value>
                    <fullName>Law Firm</fullName>
                </value>
                <value>
                    <fullName>CORPORATION</fullName>
                </value>
                <value>
                    <fullName>Corp Counsel</fullName>
                </value>
                <value>
                    <fullName>CORP-OTHER</fullName>
                </value>
                <value>
                    <fullName>USL - Corporate Strategic</fullName>
                </value>
                <value>
                    <fullName>USL - Solo Law Firm</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Appointment Scheduled</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>USL</fullName>
                </value>
                <value>
                    <fullName>GLI Price Book - US Legal/LMS</fullName>
                </value>
                <value>
                    <fullName>Small Law</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>ENTWRP</fullName>
                </value>
                <value>
                    <fullName>Email Valid</fullName>
                </value>
                <value>
                    <fullName>Valid Number</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT</fullName>
                </value>
                <value>
                    <fullName>GVT-LEGAL</fullName>
                </value>
                <value>
                    <fullName>USL - State Government</fullName>
                </value>
                <value>
                    <fullName>Legal Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Apttus_Proposal__Proposal__c</fullName>
                </value>
                <value>
                    <fullName>Source_System_Detail__c</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                    <isActive>false</isActive>
                    <label>Proposal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ecom OrderService Mappings</label>
    <pluralLabel>Ecom OrderService Mappings</pluralLabel>
</CustomObject>